Update email address in organization schema

--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
         "@type": "Organization",
         "name": "Sandbox Digital Labs",
         "url": "",
-        "email": "hello@sandboxdigitallabs.com",
+        "email": "contact@sandboxdigitallabs.com",
         "sameAs": []
       }
     </script>
