--- a/index.html
+++ b/index.html
@@ -44,9 +44,6 @@
           </button>
 
           <ul id="nav-menu" class="nav-menu" data-nav-menu>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#work">Work</a></li>
-            <li><a href="#process">Process</a></li>
             <li><a href="#about">About</a></li>
             <li><a class="btn btn-small" href="#contact">Contact</a></li>
           </ul>
@@ -72,7 +69,7 @@
 
             <div class="hero-ctas">
               <a class="btn" href="#contact">Start a project</a>
-              <a class="btn btn-ghost" href="#work">See our work</a>
+              <a class="btn btn-ghost" href="#about">Learn more</a>
             </div>
 
             <div class="hero-badges" role="list" aria-label="Key capabilities">
@@ -83,34 +80,7 @@
             </div>
           </div>
 
-          <div class="hero-card" aria-label="Highlights">
-            <div class="hero-card-inner">
-              <div class="metric">
-                <div class="metric-label">Delivery tempo</div>
-                <div class="metric-value">Weekly</div>
-                <div class="metric-sub">Demo + iteration cadence</div>
-              </div>
-              <div class="metric">
-                <div class="metric-label">Focus</div>
-                <div class="metric-value">Outcomes</div>
-                <div class="metric-sub">Metrics, not features</div>
-              </div>
-              <div class="metric">
-                <div class="metric-label">Build quality</div>
-                <div class="metric-value">High</div>
-                <div class="metric-sub">Testing + observability</div>
-              </div>
-
-              <div class="tech-row" aria-label="Example technology stack">
-                <span class="chip">TypeScript</span>
-                <span class="chip">React</span>
-                <span class="chip">Node</span>
-                <span class="chip">Python</span>
-                <span class="chip">AWS</span>
-                <span class="chip">Postgres</span>
-              </div>
-            </div>
-          </div>
+          <!-- NOTE: cards removed as requested (hero metrics card was removed) -->
         </div>
 
         <div class="container trust">
@@ -122,160 +92,6 @@
             <span class="trust-logo">E‑commerce</span>
             <span class="trust-logo">AI tools</span>
           </div>
-        </div>
-      </section>
-
-      <!-- Services -->
-      <section id="services" class="section">
-        <div class="container">
-          <div class="section-head">
-            <h2>Services</h2>
-            <p>
-              A small, senior team that covers the full lifecycle: discovery, design, engineering, and launch—without the overhead.
-            </p>
-          </div>
-
-          <div class="cards">
-            <article class="card">
-              <h3>Product Strategy</h3>
-              <p>Clarify goals, users, and scope. Align stakeholders and define an execution plan that reduces risk.</p>
-              <ul class="bullets">
-                <li>Discovery workshops</li>
-                <li>Roadmap & milestones</li>
-                <li>Technical planning</li>
-              </ul>
-            </article>
-
-            <article class="card">
-              <h3>UX / UI Design</h3>
-              <p>Design systems and interfaces that feel simple, fast, and consistent across devices.</p>
-              <ul class="bullets">
-                <li>Wireframes & prototypes</li>
-                <li>Design systems</li>
-                <li>Usability testing</li>
-              </ul>
-            </article>
-
-            <article class="card">
-              <h3>Web & Mobile Engineering</h3>
-              <p>Build robust frontends, APIs, and mobile apps with clean architecture and predictable delivery.</p>
-              <ul class="bullets">
-                <li>React / Next.js</li>
-                <li>API design</li>
-                <li>Performance & accessibility</li>
-              </ul>
-            </article>
-
-            <article class="card">
-              <h3>Cloud, DevOps & Data</h3>
-              <p>Ship securely with CI/CD, observability, and infrastructure that scales without surprises.</p>
-              <ul class="bullets">
-                <li>CI/CD pipelines</li>
-                <li>Monitoring & logging</li>
-                <li>Databases & migrations</li>
-              </ul>
-            </article>
-          </div>
-        </div>
-      </section>
-
-      <!-- Work -->
-      <section id="work" class="section section-alt">
-        <div class="container">
-          <div class="section-head">
-            <h2>Selected work</h2>
-            <p>
-              Examples of the kinds of engagements we run. Swap these with real case studies when you’re ready.
-            </p>
-          </div>
-
-          <div class="work-grid">
-            <article class="work-item">
-              <div class="work-top">
-                <h3>Launch an MVP in 6 weeks</h3>
-                <p class="work-tag">Startup • Web app</p>
-              </div>
-              <p>
-                Rapid discovery, prototype, and a production-ready MVP with analytics, authentication, and payments.
-              </p>
-              <ul class="bullets">
-                <li>Scope: onboarding + core workflow</li>
-                <li>Stack: React, Node, Postgres</li>
-                <li>Outcome: first revenue within 60 days</li>
-              </ul>
-            </article>
-
-            <article class="work-item">
-              <div class="work-top">
-                <h3>Modernize a legacy platform</h3>
-                <p class="work-tag">Enterprise • Migration</p>
-              </div>
-              <p>
-                Incremental refactor with parallel run, improved performance, and safer deployments.
-              </p>
-              <ul class="bullets">
-                <li>Strangler pattern approach</li>
-                <li>Test coverage + CI pipelines</li>
-                <li>50% faster page loads</li>
-              </ul>
-            </article>
-
-            <article class="work-item">
-              <div class="work-top">
-                <h3>Design system + component library</h3>
-                <p class="work-tag">SaaS • UX/UI</p>
-              </div>
-              <p>
-                A reusable design language and components to accelerate feature delivery and maintain consistency.
-              </p>
-              <ul class="bullets">
-                <li>Tokens + theming</li>
-                <li>Accessibility standards</li>
-                <li>Docs + usage guidelines</li>
-              </ul>
-            </article>
-          </div>
-        </div>
-      </section>
-
-      <!-- Process -->
-      <section id="process" class="section">
-        <div class="container">
-          <div class="section-head">
-            <h2>How we work</h2>
-            <p>Clear communication, short feedback loops, and visible progress. No black boxes.</p>
-          </div>
-
-          <ol class="steps">
-            <li class="step">
-              <div class="step-num">1</div>
-              <div>
-                <h3>Discover</h3>
-                <p>We align on users, outcomes, constraints, and success metrics.</p>
-              </div>
-            </li>
-            <li class="step">
-              <div class="step-num">2</div>
-              <div>
-                <h3>Design</h3>
-                <p>We prototype quickly, validate assumptions, and define a system that scales.</p>
-              </div>
-            </li>
-            <li class="step">
-              <div class="step-num">3</div>
-              <div>
-                <h3>Build</h3>
-                <p>We ship in increments with weekly demos, testing, and code quality standards.</p>
-              </div>
-            </li>
-            <li class="step">
-              <div class="step-num">4</div>
-              <div>
-                <h3>Launch & iterate</h3>
-                <p>We monitor, learn, and improve with data-driven iteration.</p>
-              </div>
-            </li>
-          </ol>
         </div>
       </section>
 
@@ -314,57 +130,29 @@
 
       <!-- About -->
       <section id="about" class="section">
-        <div class="container about-grid">
-          <div>
-            <div class="section-head">
-              <h2>About</h2>
-              <p>
-                Sandbox Digital Labs is a software company focused on practical innovation—turning complex requirements into
-                simple, reliable products.
-              </p>
-            </div>
-
-            <div class="about-points">
-              <div class="about-point">
-                <h3>Senior craftsmanship</h3>
-                <p>We keep teams small and experienced so decisions are fast and implementation stays clean.</p>
-              </div>
-              <div class="about-point">
-                <h3>Security & reliability</h3>
-                <p>We treat security, performance, and observability as first-class features from day one.</p>
-              </div>
-              <div class="about-point">
-                <h3>Transparent delivery</h3>
-                <p>Weekly check-ins, shared roadmaps, and a clear view into progress and tradeoffs.</p>
-              </div>
-            </div>
+        <div class="container">
+          <div class="section-head">
+            <h2>About</h2>
+            <p>
+              Sandbox Digital Labs is a software company focused on practical innovation—turning complex requirements into
+              simple, reliable products.
+            </p>
           </div>
 
-          <aside class="about-aside" aria-label="Quick facts">
-            <div class="panel">
-              <h3>Engagements</h3>
-              <ul class="bullets">
-                <li>MVP builds</li>
-                <li>Staff augmentation (senior)</li>
-                <li>Modernization & migrations</li>
-                <li>Design systems</li>
-              </ul>
+          <div class="about-points">
+            <div class="about-point">
+              <h3>Senior craftsmanship</h3>
+              <p>We keep teams small and experienced so decisions are fast and implementation stays clean.</p>
             </div>
-
-            <div class="panel">
-              <h3>Tech stack</h3>
-              <div class="tech-stack">
-                <span class="chip">Next.js</span>
-                <span class="chip">React Native</span>
-                <span class="chip">Node.js</span>
-                <span class="chip">Python</span>
-                <span class="chip">PostgreSQL</span>
-                <span class="chip">Redis</span>
-                <span class="chip">AWS</span>
-                <span class="chip">Docker</span>
-              </div>
+            <div class="about-point">
+              <h3>Security & reliability</h3>
+              <p>We treat security, performance, and observability as first-class features from day one.</p>
             </div>
-          </aside>
+            <div class="about-point">
+              <h3>Transparent delivery</h3>
+              <p>Weekly check-ins, shared roadmaps, and a clear view into progress and tradeoffs.</p>
+            </div>
+          </div>
         </div>
       </section>
 
@@ -442,21 +230,14 @@
         </div>
 
         <div class="footer-right">
-          <a href="#services">Services</a>
-          <a href="#work">Work</a>
-          <a href="#process">Process</a>
           <a href="#about">About</a>
           <a href="#contact">Contact</a>
         </div>
       </div>
 
       <div class="container footer-bottom">
-        <p class="muted">
-          © <span id="year"></span> Sandbox Digital Labs. All rights reserved.
-        </p>
-        <p class="muted">
-          <a href="#top">Back to top</a>
-        </p>
+        <p class="muted">© <span id="year"></span> Sandbox Digital Labs. All rights reserved.</p>
+        <p class="muted"><a href="#top">Back to top</a></p>
       </div>
     </footer>
 
