Revise content and remove testimonials section
Updated meta descriptions and hero section text for clarity and focus on innovation. Removed testimonials section and adjusted content in the About section.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Sandbox Digital Labs — Software Design & Engineering</title>
     <meta
       name="description"
-      content="Sandbox Digital Labs builds modern web and mobile software: product strategy, UX, engineering, and delivery."
+      content="Sandbox Digital Labs is a product-focused studio. We turn complex ideas into high-performance mobile/web apps and integrated AI solutions."
     />
     <meta name="theme-color" content="#0b1220" />
 
@@ -14,7 +14,7 @@
     <meta property="og:title" content="Sandbox Digital Labs" />
     <meta
       property="og:description"
-      content="Software design & engineering studio. Strategy → UX → Build → Launch."
+      content="App software design & engineering studio. Strategy → Build → Launch."
     />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="og-image.png" />
@@ -58,13 +58,12 @@
           <div class="hero-copy">
             <p class="kicker">Software design & engineering</p>
             <h1>
-              Build products that ship
-              <span class="accent">cleanly</span>, scale
-              <span class="accent">confidently</span>, and delight users.
+              Engineering and building for the future with Custom Apps and Applied AI.
+              <span class="accent">Custom Apps</span> with
+              <span class="accent">Applied AI</span>, to delight users.
             </h1>
             <p class="lead">
-              Sandbox Digital Labs is a product-focused studio. We partner with teams to go from idea → prototype → production with
-              speed and craft.
+              Sandbox Digital Labs is a product-focused studio.
             </p>
 
             <div class="hero-ctas">
@@ -73,10 +72,7 @@
             </div>
 
             <div class="hero-badges" role="list" aria-label="Key capabilities">
-              <div class="badge" role="listitem">Product Strategy</div>
-              <div class="badge" role="listitem">UX / UI</div>
               <div class="badge" role="listitem">Web & Mobile</div>
-              <div class="badge" role="listitem">Cloud & DevOps</div>
             </div>
           </div>
 
@@ -96,37 +92,7 @@
       </section>
 
       <!-- Testimonials -->
-      <section class="section section-alt">
-        <div class="container">
-          <div class="section-head">
-            <h2>What partners say</h2>
-            <p>Replace with real quotes as you collect them.</p>
-          </div>
 
-          <div class="quotes">
-            <figure class="quote">
-              <blockquote>
-                “Sandbox Digital Labs brought senior-level execution. We shipped faster, with fewer surprises.”
-              </blockquote>
-              <figcaption>Product Lead, B2B SaaS</figcaption>
-            </figure>
-
-            <figure class="quote">
-              <blockquote>
-                “Clear communication, tight scope control, and high quality. The weekly demos were a game changer.”
-              </blockquote>
-              <figcaption>CTO, Startup</figcaption>
-            </figure>
-
-            <figure class="quote">
-              <blockquote>
-                “They helped us modernize safely and built a foundation we can extend without rewriting everything.”
-              </blockquote>
-              <figcaption>Engineering Manager, Enterprise</figcaption>
-            </figure>
-          </div>
-        </div>
-      </section>
 
       <!-- About -->
       <section id="about" class="section">
@@ -134,7 +100,7 @@
           <div class="section-head">
             <h2>About</h2>
             <p>
-              Sandbox Digital Labs is a software company focused on practical innovation—turning complex requirements into
+              Sandbox Digital Labs is a company focused on providing innovation to turn complex requirements into
               simple, reliable products.
             </p>
           </div>
@@ -173,13 +139,7 @@
                 <p>
                   <a href="mailto:contact@sandboxdigitallabs.com">contact@sandboxdigitallabs.com</a>
                 </p>
-                <p class="muted">Update this to your real address.</p>
-              </div>
-
-              <div class="contact-card">
-                <h3>Working hours</h3>
-                <p>Mon–Fri</p>
-                <p class="muted">Time zone: your team’s preference</p>
+              
               </div>
             </div>
           </div>
