Update title and hero section text in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Sandbox Digital Labs — Software Design & Engineering</title>
+    <title>Sandbox Digital Labs — Software Design & App</title>
     <meta
       name="description"
       content="Sandbox Digital Labs is a product-focused studio. We turn complex ideas into high-performance mobile/web apps and integrated AI solutions."
@@ -58,7 +58,7 @@
           <div class="hero-copy">
             <p class="kicker">Software design & engineering</p>
             <h1>
-              Engineering and building for the future with Custom Apps and Applied AI.
+              Engineering and building
               <span class="accent">Custom Apps</span> with
               <span class="accent">Applied AI</span>, to delight users.
             </h1>
