Remove about points section from index.html
Removed the about points section from the HTML.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <h1>
               Engineering and building
               <span class="accent">Custom Apps</span> with
-              <span class="accent">Applied AI</span>, to delight users.
+              <span class="accent">Applied AI.</span>
             </h1>
             <p class="lead">
               Sandbox Digital Labs is a product-focused studio.
@@ -105,20 +105,6 @@
             </p>
           </div>
 
-          <div class="about-points">
-            <div class="about-point">
-              <h3>Senior craftsmanship</h3>
-              <p>We keep teams small and experienced so decisions are fast and implementation stays clean.</p>
-            </div>
-            <div class="about-point">
-              <h3>Security & reliability</h3>
-              <p>We treat security, performance, and observability as first-class features from day one.</p>
-            </div>
-            <div class="about-point">
-              <h3>Transparent delivery</h3>
-              <p>Weekly check-ins, shared roadmaps, and a clear view into progress and tradeoffs.</p>
-            </div>
-          </div>
         </div>
       </section>
 
