--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Sandbox Digital Labs — Software Design & App</title>
     <meta
       name="description"
-      content="Sandbox Digital Labs is a product-focused studio. We turn complex ideas into high-performance mobile/web apps and integrated AI solutions."
+      content="Sandbox Digital Labs is a product-focused studio. Crafting scalable web and mobile solutions with a focus on user experience"
     />
     <meta name="theme-color" content="#0b1220" />
 
@@ -59,11 +59,12 @@
             <p class="kicker">Software design & engineering</p>
             <h1>
               Engineering and building
-              <span class="accent">Custom Apps</span> with
-              <span class="accent">Applied AI.</span>
+              <span class="accent">Custom Apps</span> for
+              <span class="accent">everyone.</span>
             </h1>
             <p class="lead">
-              Sandbox Digital Labs is a product-focused studio.
+              Sandbox Digital Labs is where high-level strategy meets hands-on execution. 
+              We specialize in engineering custom applications
             </p>
 
             <div class="hero-ctas">
@@ -91,8 +92,8 @@
           <div class="section-head">
             <h2>About</h2>
             <p>
-              Sandbox Digital Labs is a company focused on providing innovation to turn complex requirements into
-              simple, reliable products.
+              Sandbox Digital Labs bridges the gap between sophisticated design and rigorous engineering
+              to deliver custom web and mobile solutions that work perfectly from day one.
             </p>
           </div>
 
